--- a/LEDBoard/LEDBoard/Base.lproj/Main.storyboard
+++ b/LEDBoard/LEDBoard/Base.lproj/Main.storyboard
@@ -24,6 +24,123 @@
             </objects>
             <point key="canvasLocation" x="-870" y="80"/>
         </scene>
+        <!--설정-->
+        <scene sceneID="nEy-Ws-ynb">
+            <objects>
+                <viewController id="oBZ-H5-biw" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cJO-fe-T3U">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="z2q-C5-P0Q">
+                                <rect key="frame" x="24" y="112" width="366" height="69.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="전광판에 표시할 글자" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0QL-0n-AUl">
+                                        <rect key="frame" x="0.0" y="0.0" width="141.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="전광판에 표시할 글자" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L84-mD-LGk">
+                                        <rect key="frame" x="0.0" y="35.5" width="366" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="L84-mD-LGk" secondAttribute="trailing" id="Ofh-lH-XM8"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="1kb-k7-E2Z">
+                                <rect key="frame" x="24" y="216.5" width="366" height="66.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="텍스트 색상 설정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GVq-8D-Fqm">
+                                        <rect key="frame" x="0.0" y="0.0" width="112" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="EH6-y7-qdP">
+                                        <rect key="frame" x="0.0" y="35.5" width="209.5" height="31"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vpv-DM-scg">
+                                                <rect key="frame" x="0.0" y="0.0" width="60.5" height="31"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="노란색"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wyq-Q5-Ip1">
+                                                <rect key="frame" x="74.5" y="0.0" width="60.5" height="31"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="자주색"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VTf-Km-5Mq">
+                                                <rect key="frame" x="149" y="0.0" width="60.5" height="31"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="초록색"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="sX1-Ax-PdU">
+                                <rect key="frame" x="24" y="318" width="366" height="66.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="배경 색상 설정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SD5-dO-zRw">
+                                        <rect key="frame" x="0.0" y="0.0" width="97" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="Qwy-vD-8B8">
+                                        <rect key="frame" x="0.0" y="35.5" width="209.5" height="31"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f09-Zr-NKG">
+                                                <rect key="frame" x="0.0" y="0.0" width="60.5" height="31"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="검정색"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DBv-Mc-Za9">
+                                                <rect key="frame" x="74.5" y="0.0" width="60.5" height="31"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="파란색"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7oR-8X-xBc">
+                                                <rect key="frame" x="149" y="0.0" width="60.5" height="31"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="주황색"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rPb-i7-aaK">
+                                <rect key="frame" x="183" y="408.5" width="48.5" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="저장"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="1mA-7k-XaU"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="1kb-k7-E2Z" firstAttribute="leading" secondItem="1mA-7k-XaU" secondAttribute="leading" constant="24" id="3m6-X5-dDV"/>
+                            <constraint firstItem="1kb-k7-E2Z" firstAttribute="top" secondItem="z2q-C5-P0Q" secondAttribute="bottom" constant="35" id="AqZ-CL-F5R"/>
+                            <constraint firstItem="1mA-7k-XaU" firstAttribute="trailing" secondItem="z2q-C5-P0Q" secondAttribute="trailing" constant="24" id="Cao-zN-5np"/>
+                            <constraint firstItem="1mA-7k-XaU" firstAttribute="trailing" secondItem="sX1-Ax-PdU" secondAttribute="trailing" constant="24" id="Fw7-TL-Cb9"/>
+                            <constraint firstItem="sX1-Ax-PdU" firstAttribute="top" secondItem="1kb-k7-E2Z" secondAttribute="bottom" constant="35" id="KMC-01-KQx"/>
+                            <constraint firstItem="rPb-i7-aaK" firstAttribute="centerX" secondItem="sX1-Ax-PdU" secondAttribute="centerX" id="L3T-o7-XVd"/>
+                            <constraint firstItem="z2q-C5-P0Q" firstAttribute="leading" secondItem="1mA-7k-XaU" secondAttribute="leading" constant="24" id="VQN-hB-yQ9"/>
+                            <constraint firstItem="z2q-C5-P0Q" firstAttribute="top" secondItem="1mA-7k-XaU" secondAttribute="top" constant="24" id="e3W-QQ-84n"/>
+                            <constraint firstItem="sX1-Ax-PdU" firstAttribute="leading" secondItem="1mA-7k-XaU" secondAttribute="leading" constant="24" id="hTf-6G-b2h"/>
+                            <constraint firstItem="rPb-i7-aaK" firstAttribute="top" secondItem="sX1-Ax-PdU" secondAttribute="bottom" constant="24" id="q8y-GV-f6r"/>
+                            <constraint firstItem="1mA-7k-XaU" firstAttribute="trailing" secondItem="1kb-k7-E2Z" secondAttribute="trailing" constant="24" id="xGc-LP-xBE"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="설정" id="r7A-NV-xka"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YAG-eI-m4i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="904" y="80"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -48,7 +165,11 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="6ha-O5-vHW">
-                        <barButtonItem key="rightBarButtonItem" title="설정" id="6zY-fM-TyW"/>
+                        <barButtonItem key="rightBarButtonItem" title="설정" id="6zY-fM-TyW">
+                            <connections>
+                                <segue destination="oBZ-H5-biw" kind="show" id="CE7-1u-F3z"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
@@ -58,6 +179,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
